--- a/package.json
+++ b/package.json
@@ -19,14 +19,6 @@
     "@angular/platform-browser": "~13.1.1",
     "@angular/platform-browser-dynamic": "~13.1.1",
     "@angular/router": "~13.1.1",
-    "@capacitor/app": "1.0.6",
-    "@capacitor/core": "3.3.2",
-    "@capacitor/haptics": "1.1.3",
-    "@capacitor/keyboard": "1.1.3",
-    "@capacitor/status-bar": "1.0.6",
-    "@ionic/angular": "^6.0.1",
-    "@ionic/storage": "^3.0.6",
-    "@ionic/storage-angular": "^3.0.6",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
@@ -64,5 +56,5 @@
     "ts-node": "~8.3.0",
     "typescript": "~4.5.4"
   },
-  "description": "An Ionic project"
+  "description": "SIPPP project"
 }
